--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -18,12 +18,6 @@ ul, li
   padding 0
   list-style none
 
-.pull-left
-  float left
-
-.pull-right
-  float right
-
 input, textarea
   width 100%
   padding 10px
@@ -31,6 +25,19 @@ input, textarea
   border 1px solid #ddd
   box-sizing border-box
   border-radius 4px
+
+.pull-left
+  float left
+
+.pull-right
+  float right
+
+.mask
+  position fixed 
+  width 100%
+  height 100%
+  background rgba(0,0,0,0.6)
+  z-index 2
 
 .display-hide
   display none
@@ -46,12 +53,68 @@ input, textarea
   line-height 20px
   padding 10px 18px
   box-shadow 2px 2px 6px #999
+  z-index 100
   a
     color #333
   a.closeBtn
     padding-left 20px;
   &:hover
     opacity 1!important
+
+#profile-setting
+  position fixed
+  background #fff
+  overflow hidden
+  width 350px
+  max-height 600px
+  height auto
+  top 50%
+  left 50%
+  margin-left -175px
+  margin-top -300px
+  z-index 5
+  border-radius 4px
+
+  .title
+    background #15ABB6
+    color #fff
+    padding 16px 16px 20px
+    .avatar
+      text-align center
+      img
+        width 100px
+        height 100px
+        border-radius 100px
+        border 3px solid #fff
+  .tabs 
+    a
+      display inline-block
+      font-size 14px
+      color #333
+      background #ccc
+      width 49%
+      line-height 40px
+      text-align center
+    a.selected
+      background #fff
+      color #15ABB6
+  .tab-container
+    padding 40px 20px 10px
+    section
+      margin 20px 0
+    label
+      display block
+      color #666
+      font-size 16px
+      margin-bottom 10px
+    input[disabled="disabled"]
+      background #eee
+    .btn-group
+      .btn
+        width 49%
+    .msg-tips
+      color #15ABB6
+      text-align center
 
 #header
   width 100%
