--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="{{ web_keyword or site_keyword }}" />
   <meta name="description" content="{{ web_description or site_description }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='components/normalize.css/normalize.css') }}" type="text/css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='components/tooltipster/css/tooltipster.css') }}" type="text/css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/master/base.css') }}" type="text/css" />
   <link rel="stylesheet" href="//at.alicdn.com/t/font_1422266310_59763.css" type="text/css" />
   <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" />
