--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -36,5 +36,9 @@
   <div class="chasers" id="chasers"></div>
   <div class="pic-copyright"><a href="http://yiwenvision.lofter.com/post/19a2f6_54a29ee" target="_blank">图片来自 Yiwen</a></div>
 </div>
+{%- endblock %}
+
+{%- block scripts %}
 <script src="{{ url_for('static', filename='scripts/master/index.js') }}"></script>
 {%- endblock %}
+
