--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -20,6 +20,7 @@
   <div class="mask display-hide"></div>
   <div class="setting display-hide" id="profile-setting">
     <div class="title">
+      <a href="javascript:void(0)" class="cancelBtn pull-right">x</a>
       <span>{{ _('Settings') }}</span>
       <div class="avatar"><img src="{{ current_user.avatar_url }}" /></div>
     </div>
@@ -91,17 +92,17 @@
         <a href="javascript:void(0)" class="closeBtn">x</a>
       </div>
       {% endif %}
+      <ul>
+        <li><a href="javascript:void(0)" id="openSettingBtn"><i class="iconfont icon-setting"></i> {{ _('Settings') }}</a></li>
+        <li><a href="{{ url_for('account.messages') }}"><i class="iconfont icon-msg"></i> {{ _('Messages') }}</a></li>
+        <li><a href="{{ url_for('account.signout') }}"><i class="iconfont icon-signout"></i> {{ _('Signout') }}</a></li>
+      </ul>
       <div class="avatar">
         <img src="{{ current_user.avatar_url }}"/>
       </div>
       <div class="info">
         {{ current_user.username }}
         <i class="iconfont icon-small icon-unfold"></i>
-        <ul>
-          <li><a href="javascript:void(0)" id="openSettingBtn"><i class="iconfont icon-setting"></i> {{ _('Settings') }}</a></li>
-          <li><a href="{{ url_for('account.messages') }}"><i class="iconfont icon-msg"></i> {{ _('Messages') }}</a></li>
-          <li><a href="{{ url_for('account.signout') }}"><i class="iconfont icon-signout"></i> {{ _('Signout') }}</a></li>
-        </ul>
       </div>
     </div>
   </div>
