--- a/ark/templates/account/messages.html
+++ b/ark/templates/account/messages.html
@@ -24,7 +24,7 @@
       {%- endif %}
       <span class="pages">{{ page }} / {{ pagination.pages }}</span>
       {%- if pagination.has_next %}
-      <a href="{{ url_for('account.messages', page=pagination.next_num) }}">{{ _('Next') }}</a>
+      <a href="{{ url_for('account.messages', page=pagination.next_num) }}">{{ _('Next Page') }}</a>
       {%- endif %}
     </ul>
   </div>
