--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -155,12 +155,14 @@
 
   .activity-container
     margin-left 380px
-
     .create-activity
       box-shadow 1px 1px 9px #ddd
       background #fff
       padding 10px
       margin-bottom 20px
+      span.title
+        color #333
+        line-height 29px
       textarea
         width 100%
         resize none
@@ -173,9 +175,16 @@
         overflow hidden
         a
           color #666
-          padding 20px
+          padding 0 20px
+          line-height 40px
         #preview
-          width 80px
+          border none
+          max-width 80px
+          max-height 50px
+        .icon-tuwenxiangqing
+          color #0dadb7
+          &:before
+            font-size 24px
 
     .activities
       .activity
