--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -6,6 +6,9 @@
 .iconfont.icon-small:before
   font-size 16px
 
+*
+  font-family 'Helvetica Neue' Helvetica Arial 'Hiragino Sans GB' 'Microsoft YaHei' '微软雅黑' sans-serif
+
 body
   background #eee
 
