--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -76,33 +76,35 @@
     </div>
   </div>
   <div id="header">
-    <a href="{{ url_for('master.index') }}" id="logo"></a>
-    <div class="nav">
-      <ul>
-        <li class="my-goal"><a href="{{ url_for('goal.goals', uid=current_user.id) }}"><i class="iconfont icon-profile"></i>{{ _('My Goals') }}</a></li>
-        <li class="chasers"><a href="{{ url_for('goal.chasers') }}"><i class="iconfont icon-chaser"></i>{{ _('Chasers') }}</a></li>
-        <li class="goals"><a href="{{ url_for('goal.dreams_wall') }}"><i class="iconfont icon-dream"></i>{{ _('Dreams Wall') }}</a></li>
-      </ul>
-    </div>
-    <div class="profile">
-      {%- if current_user.unread_notifications %}
-      <div class="msgContainer" id="msgContainer">
-        您有 {{ current_user.unread_notifications | length }} 条新消息，
-        <a href="{{ url_for('account.messages') }}">点击查看</a>
-        <a href="javascript:void(0)" class="closeBtn">x</a>
+    <div class="container">
+      <a href="{{ url_for('master.index') }}" id="logo"></a>
+      <div class="nav">
+        <ul>
+          <li class="my-goal"><a href="{{ url_for('goal.goals', uid=current_user.id) }}"><i class="iconfont icon-profile"></i>{{ _('My Goals') }}</a></li>
+          <li class="chasers"><a href="{{ url_for('goal.chasers') }}"><i class="iconfont icon-chaser"></i>{{ _('Chasers') }}</a></li>
+          <li class="goals"><a href="{{ url_for('goal.dreams_wall') }}"><i class="iconfont icon-dream"></i>{{ _('Dreams Wall') }}</a></li>
+        </ul>
       </div>
-      {% endif %}
-      <ul>
-        <li><a href="javascript:void(0)" id="openSettingBtn"><i class="iconfont icon-setting"></i> {{ _('Settings') }}</a></li>
-        <li><a href="{{ url_for('account.messages') }}"><i class="iconfont icon-msg"></i> {{ _('Messages') }}</a></li>
-        <li><a href="{{ url_for('account.signout') }}"><i class="iconfont icon-signout"></i> {{ _('Signout') }}</a></li>
-      </ul>
-      <div class="avatar">
-        <img src="{{ current_user.avatar_url }}"/>
-      </div>
-      <div class="info">
-        {{ current_user.username }}
-        <i class="iconfont icon-small icon-unfold"></i>
+      <div class="profile">
+        {%- if current_user.unread_notifications %}
+        <div class="msgContainer" id="msgContainer">
+          您有 {{ current_user.unread_notifications | length }} 条新消息，
+          <a href="{{ url_for('account.messages') }}">点击查看</a>
+          <a href="javascript:void(0)" class="closeBtn">x</a>
+        </div>
+        {% endif %}
+        <ul>
+          <li><a href="javascript:void(0)" id="openSettingBtn"><i class="iconfont icon-setting"></i> {{ _('Settings') }}</a></li>
+          <li><a href="{{ url_for('account.messages') }}"><i class="iconfont icon-msg"></i> {{ _('Messages') }}</a></li>
+          <li><a href="{{ url_for('account.signout') }}"><i class="iconfont icon-signout"></i> {{ _('Signout') }}</a></li>
+        </ul>
+        <div class="avatar">
+          <img src="{{ current_user.avatar_url }}"/>
+        </div>
+        <div class="info">
+          {{ current_user.username }}
+          <i class="iconfont icon-small icon-unfold"></i>
+        </div>
       </div>
     </div>
   </div>
