--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -161,6 +161,7 @@ input, textarea
     position absolute
     color #fff
     line-height 40px
+    top 0px
     right 100px
     &:not(#msgContainer):hover div#msgContainer
       opacity 0
