--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -119,6 +119,7 @@
         <ul class="nav">
           <li><a href="http://blog.ichaser.net/aboutus">{{ _('About Us') }}</a></li>
           <li><a href="http://weibo.com/ichaser">{{ _('Weibo') }}</a></li>
+          <li><a href="http://blog.ichaser.net/ourtips">{{ _('FAQ') }}</a></li>
           <li><a href="http://blog.ichaser.net/contact">{{ _('Contact Us') }}</a></li>
         </ul>
       </p>
