update logo in index.html

--- a/ark/master/assets/styles/index.styl
+++ b/ark/master/assets/styles/index.styl
@@ -21,10 +21,10 @@ body
   margin-left -250px
   text-align center
   .logo
-    color #fff
-    font-weight bold
-    font-size 90px
-    line-height 100px
+    height 80px
+    width 400px
+    background url(/static/images/logo.png)
+    background-size 100% 100%
   .ask
     height 30px
     line-height 30px
