--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -10,7 +10,7 @@
 {%- block main %}
 <div class="main">
   <div class="wrapper" id="logo-container">
-    <div class="logo" id="logo">iChaser</div>
+    <div class="logo" id="logo"></div>
     <div class="ask" id="ask">毕业前必须做些什么？</div>
     <div class="sign-container signin-container">
       <form action="{{ url_for('account.signin') }}" id="signin-form" method="post">
