--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -130,6 +130,7 @@ input, textarea
   .container
     position relative
 
+
   #logo
     display block
     float left
@@ -188,7 +189,7 @@ input, textarea
         &:hover
           cursor pointer
           background-color #686E76
-   .avatar
+    .avatar
       display inline-block
       float left
       line-height 46px
@@ -201,6 +202,14 @@ input, textarea
       float left
       line-height 50px
       padding 0 10px
+
+    .unread-tips
+      font-size 14px
+      background #f40
+      padding 1px 5px 2px
+      color #fff
+      border-radius 4px
+      margin-left 2em
    
 #footer
   position fixed
