--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -95,7 +95,7 @@
         {% endif %}
         <ul>
           <li><a href="javascript:void(0)" id="openSettingBtn"><i class="iconfont icon-setting"></i> {{ _('Settings') }}</a></li>
-          <li><a href="{{ url_for('account.messages') }}"><i class="iconfont icon-msg"></i> {{ _('Messages') }}</a></li>
+          <li><a href="{{ url_for('account.messages') }}"><i class="iconfont icon-msg"></i> {{ _('Messages') }} {% if current_user.unread_notifications %}<span class="unread-tips">{{ current_user.unread_notifications | length }}</span>{% endif %}</a></li>
           <li><a href="{{ url_for('account.signout') }}"><i class="iconfont icon-signout"></i> {{ _('Signout') }}</a></li>
         </ul>
         <div class="avatar">
