--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -200,10 +200,12 @@
         img
           width 150px
           height 150px
-      .activity-time
-        color #999
+      .tools
         font-size 14px
         margin-top 10px
+        color #999
+        a
+          color #999
 
 #mask
   position fixed
