--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -355,6 +355,8 @@
             padding 8px
             color #0dadb7
           .whatsup
+            height 36px 
+            line-height 16px
             font-size 14px
             border-bottom 1px solid #aaa
             padding-bottom 8px
