--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -369,6 +369,7 @@
               color #0dadb7
               line-height 2em
               font-size 20px
+              font-family 'Georgia'
           .right-line
             border-right 1px solid #aaa
         &:hover
