--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -9,6 +9,17 @@
 .icon-xiai.liked
  color #ff0033
 
+#imagePreviewBox
+  position fixed
+  height 400px
+  width 600px
+  top 50%
+  left 50%
+  margin-left -300px
+  margin-top -200px
+  z-index 500
+  text-align center
+
 #account-goals.main,
 #dreams-wall.main
   .wrapper
