--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -18,7 +18,7 @@
 <body>
   {%- block header %}
   <div class="mask display-hide"></div>
-  <div class="setting display-hide" id="profile-setting">
+  <div class="setting display-hide mask-fadeOut" id="profile-setting">
     <div class="title">
       <a href="javascript:void(0)" class="cancelBtn pull-right">x</a>
       <span>{{ _('Settings') }}</span>
