--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -84,11 +84,31 @@ input, textarea
     padding 16px 16px 20px
     .avatar
       text-align center
+      position relative
+      width 120px
+      margin 0 auto
       img
         width 100px
         height 100px
         border-radius 100px
         border 3px solid #fff
+      .edit
+        right 10px
+        bottom 10px
+        position absolute
+        padding 0
+        margin 0
+        height 28px
+        width 28px
+        border-radius 14px
+        background #fff
+        line-height 28px
+        box-shadow 1px 1px 6px #999
+        .icon-edit:before
+          font-size 18px
+          color #aaa
+          padding 7px
+
   .tabs 
     a
       display inline-block
