fix bug of qiniu

--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -87,6 +87,15 @@ input, textarea
       position relative
       width 120px
       margin 0 auto
+      #avatarSaveTip
+        position absolute
+        line-height 100px
+        top 3px
+        left 10px
+        width 100px
+        height 100px
+        border-radius 100px
+        background rgba(0,0,0,0.7)
       img
         width 100px
         height 100px
