account info in goals page

--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -386,3 +386,59 @@
         &:hover
           transform translate3d(0,-4px,0px)
           box-shadow 3px 3px 10px #ccc
+
+.account-info
+  float left
+  width 65%
+  padding 30px
+  background #fff
+  margin-top 20px
+  border-radius 4px
+  height 100px
+  overflow hidden
+
+  .avatar
+    float left
+
+    img
+      width 80px
+      border-radius 80px
+
+  .info
+    float left
+    color #333
+    margin-left 20px
+    font-size 18px
+    width: 80%
+
+    .whatsup
+      color #aaa
+      font-size 13px
+
+.account-score
+  width 20%
+  float left
+  margin-left 30px
+  border-radius 4px
+  margin-top 20px
+  padding 30px
+  height 100px
+  overflow hidden
+  background #fff
+
+  .score-wrapper
+    margin 0 auto
+    text-align center
+
+  .score-col
+    width 20%
+    display inline-block
+    margin-top 20px
+    padding 10px 10px
+
+    .numeric
+      color #aaa
+      font-family 'Georgia'
+
+  .score-col.right-line
+    border-right 1px solid #ccc
