--- a/ark/templates/goal/goals.html
+++ b/ark/templates/goal/goals.html
@@ -60,7 +60,7 @@
       <div class="avatar"><img src="{{ account.avatar_url }}" /></div>
       <div class="info">
         <div>{{ account.username }}</div>
-        <div class="whatsup">{{ account.whatsup }}</div>
+        <div class="whatsup">{{ account.whatsup or '' }}</div>
       </div>
     </div>
     <div class="account-score">
