--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -349,6 +349,7 @@
         margin-bottom 10px
         margin-right 20px
         width 200px
+        height 270px
         float left
         background #fff
         border-radius 8px
