--- a/ark/templates/goal/goals.html
+++ b/ark/templates/goal/goals.html
@@ -87,7 +87,7 @@
     <div class="title"><span>{{ _('Chasing') }}</span></div>
     <ul>
       {% for each in charsing_goals %}
-      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}')">
+      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}'); bakcground-color: #fff;">
         <a class="card" href="{{ url_for('goal.view_goal', uid=each.author.id, gid=each.id) }}">
           <div class="card-title">{{ each.title }}</div>
           <div class="card-like"><i class="iconfont icon-small icon-xiai {% if each.is_like_by(current_user) %}liked {% endif %}"></i> {{ each.like_count }}</div>
@@ -106,7 +106,7 @@
     <div class="title"><span>{{ _('Completed') }}</span></div>
     <ul>
       {% for each in completed_goals %}
-      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}')">
+      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}'); backgrond-color: #fff;">
         <a class="card" href="{{ url_for('goal.view_goal', uid=each.author.id, gid=each.id) }}">
           <div class="card-title">{{ each.title }}</div>
           <div class="card-like"><i class="iconfont icon-small icon-xiai"></i> {{ each.like_count }}</div>
